🚨  - Make email form field required

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             Coming soon to iOS and the web.</p>
         <form class="form" method="POST" name="signup" data-netlify="true">
             <label class="form__label" for="email">email</label>
-            <input class="form__field" type="email" name="email" placeholder="hi@crit.fail" id="signup-email">
+            <input class="form__field" type="email" name="email" placeholder="hi@crit.fail" id="signup-email" required>
             <button class="form__button" type="submit">Stay Informed</button>
         </form>
     </main>
